lesson5/service_database.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: database
spec:
  selector:
    app: postgresql
  ports:
  - protocol: TCP
    port: 5432
    targetPort: 5432
  type: ClusterIP
